--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shaan City Technical Services</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="site-header">
-        <img src="images/logo.png" alt="Shaan City Logo" class="logo">
+        <img src="images/logo.png" alt="Shaan City Logo">
         <nav class="nav-menu">
             <a href="#">About</a>
             <a href="#">Projects</a>
