--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shaan City Technical Services</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="site-header">
-        <img src="images/logo.png" alt="Shaan City Logo">
-        <nav class="nav-menu">
-            <a href="#">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Services</a>
-            <a href="#">Careers</a>
-            <a href="#">Contacts</a>
-            <a href="#">Enquiry</a>
-        </nav>
-    </header>
-    <section class="hero">
-        <h1>QUALITY YOU CAN TRUST</h1>
-        <a class="cta-button" href="#">Get a Quote</a>
-    </section>
-    <section class="about">
-        <h2>ABOUT</h2>
-        <p>Shaan City is a Technical services company with a long-standing reputation for excellence.
-        We specialize in Fabrication but have a small portfolio of industrial and residential properties. 
-        Currently, we cater to the UAE market, but are looking to expand internationally.</p>
-        <a class="read-more" href="#">Read More</a>
-    </section>
-    <footer>
-        <p>&copy; 2025 Shaancity. All rights reserved.</p>
-    </footer>
+
+<header class="header">
+    <img src="images/logo.png" alt="Shaan City Logo" class="logo">
+    <nav class="nav">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h1>QUALITY YOU CAN TRUST</h1>
+    <a href="#contact" class="cta-button">Get a Quote</a>
+</section>
+
+<section class="about" id="about">
+    <h2>About Us</h2>
+    <p>Shaan City is a leading technical services company specializing in fabrication and property services across the UAE. We are committed to quality, trust, and growth.</p>
+</section>
+
+<section class="services" id="services">
+    <h2>Our Services</h2>
+    <div class="service-cards">
+        <div class="card">Structural Fabrication</div>
+        <div class="card">Industrial Maintenance</div>
+        <div class="card">Residential Renovation</div>
+        <div class="card">Facility Management</div>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: contact@shaancity.com</p>
+    <p>Phone: +971 50 123 4567</p>
+    <p>Location: Dubai, UAE</p>
+</section>
+
+<footer>
+    <p>&copy; 2025 Shaan City Technical Services. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
