--- a/index.html
+++ b/index.html
@@ -1,52 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaan City Technical Services</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shaan City Technical Services</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="header">
-    <img src="images/logo.png" alt="Shaan City Logo" class="logo">
-    <nav class="nav">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
-    </nav>
+  <img src="images/logo.png" alt="Shaan City Logo" class="logo">
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 </header>
 
 <section class="hero">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
     <h1>QUALITY YOU CAN TRUST</h1>
-    <a href="#contact" class="cta-button">Get a Quote</a>
+    <a href="contact.html" class="cta-button">Get a Quote</a>
+  </div>
 </section>
 
-<section class="about" id="about">
-    <h2>About Us</h2>
-    <p>Shaan City is a leading technical services company specializing in fabrication and property services across the UAE. We are committed to quality, trust, and growth.</p>
+<section class="about">
+  <h2>About Us</h2>
+  <p>Shaan City is a trusted technical services provider specializing in fabrication, maintenance, and property services across the UAE.</p>
+  <img src="images/about-image.jpg" alt="About Shaan City" class="about-image">
 </section>
 
-<section class="services" id="services">
-    <h2>Our Services</h2>
-    <div class="service-cards">
-        <div class="card">Structural Fabrication</div>
-        <div class="card">Industrial Maintenance</div>
-        <div class="card">Residential Renovation</div>
-        <div class="card">Facility Management</div>
+<section class="services-preview">
+  <h2>Our Core Services</h2>
+  <div class="services-grid">
+    <div class="service-card">
+      <img src="images/service1.jpg" alt="Structural Fabrication">
+      <h3>Structural Fabrication</h3>
+      <p>Steel fabrication and installation for commercial and residential projects.</p>
     </div>
-</section>
-
-<section class="contact" id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: contact@shaancity.com</p>
-    <p>Phone: +971 50 123 4567</p>
-    <p>Location: Dubai, UAE</p>
+    <div class="service-card">
+      <img src="images/service2.jpg" alt="Industrial Maintenance">
+      <h3>Industrial Maintenance</h3>
+      <p>Comprehensive industrial and equipment maintenance solutions.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/service3.jpg" alt="Residential Renovation">
+      <h3>Residential Renovation</h3>
+      <p>Turnkey solutions for villas, apartments, and residential upgrades.</p>
+    </div>
+    <div class="service-card">
+      <img src="images/service4.jpg" alt="Facility Management">
+      <h3>Facility Management</h3>
+      <p>Integrated services for facility upkeep, safety, and reliability.</p>
+    </div>
+  </div>
+  <a href="services.html" class="read-more">View All Services</a>
 </section>
 
 <footer>
-    <p>&copy; 2025 Shaan City Technical Services. All Rights Reserved.</p>
+  <p>© 2025 Shaan City Technical Services. All rights reserved.</p>
 </footer>
 
 </body>
